--- a/lint/rules/QAS001_unused_qubit.yaml
+++ b/lint/rules/QAS001_unused_qubit.yaml
@@ -15,4 +15,15 @@ check:
 message: "Qubit '{{ name }}' is declared but never used."
 tags: [qasm3, readability, unused-variables]
 fixable: false
+
+examples:
+  incorrect: |
+    qubit q;
+    qubit unused_qubit;  // Never used
+    h q;
+  correct: |
+    qubit q;
+    h q;  // Qubit is used
+
 documentation_url: "https://github.com/orangekame3/qasmtools/blob/main/docs/rules/QAS001.md"
+specification_url: https://openqasm.com/versions/3.0/language/types.html#qubits
