Add clean task to vscode publish process

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -471,6 +471,7 @@ tasks:
     dir: vscode-qasm
     cmds:
       - npx vsce publish
+      - task: clean
 
   vscode:publish:test:
     desc: Test publish without actually publishing
