Fix linting issues and improve code formatting across multiple files
- Added missing newlines at the end of files to comply with style guidelines.
- Removed unnecessary blank lines and adjusted spacing for better readability.
- Ensured consistent formatting in various lint checkers and test files.
- Updated documentation generation to maintain formatting consistency.
- Refactored code in rule and runner files for improved clarity and maintainability.

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -261,8 +261,8 @@ tasks:
   lint:
     desc: Run linters
     cmds:
-      - go fmt $(go list ./... | grep -v 'gen')
-      - go vet $(go list ./... | grep -v 'gen')
+      - go fmt ./cmd/qasm ./cmd/qasmlsp ./cmd/tools ./formatter ./highlight ./lint ./parser
+      - go vet ./cmd/qasm ./cmd/qasmlsp ./cmd/tools ./formatter ./highlight ./lint ./parser
       - task: lint:golangci
 
   lint:golangci:
