Refactor QASM CLI: Enhance versioning, remove integration tests, and optimize linting
- Updated Taskfile to include versioning information in the build process.
- Removed integration tests from cmd/qasm/integration_test.go to streamline testing.
- Refactored cmd/qasm/main.go to modularize commands into separate files.
- Improved version output in cmd/qasm/version.go to include build and commit details.
- Introduced performance tracking in linting with new LinterWithMetrics and BatchLinter.
- Added caching optimizations in linting with OptimizedLinter for improved performance.

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -222,7 +222,7 @@ tasks:
   install:
     desc: Install the binary to $GOPATH/bin
     cmds:
-      - go install -ldflags "-X github.com/orangekame3/qasmtools/cmd.Version={{.VERSION}}" ./cmd/qasm
+      - go install -ldflags "-X 'main.Version={{.VERSION}}' -X 'main.GitCommit={{.COMMIT}}' -X 'main.BuildDate={{.BUILD_DATE}}'" ./cmd/qasm
 
   # Testing tasks
   test:
